fix padding on smaller screens for buttons on studio page

--- a/themes/gfsc/assets/sass/pages/_studio.sass
+++ b/themes/gfsc/assets/sass/pages/_studio.sass
@@ -1,5 +1,6 @@
 .studio
   &__elements
     padding-bottom: 2rem
-    * + *
-      margin-left: 1rem
+    display: flex
+    flex-wrap: wrap
+    gap: 1rem
